Fix recent feedback page to show all rows and optimize performance

--- a/templates/recent-feedback.html
+++ b/templates/recent-feedback.html
@@ -167,10 +167,9 @@
                     <table class="table table-striped table-hover feedback-table">
                         <thead>
                             <tr>
-                                <th>ID</th>
                                 <th>First Name</th>
                                 <th>Last Name</th>
-                                <!-- Date column hidden per request -->
+                                <th>Date</th>
                                 <th>Category</th>
                                 <th>Sub Category</th>
                                 <th>Contact User</th>
