--- a/templates/recent-feedback.html
+++ b/templates/recent-feedback.html
@@ -168,6 +168,7 @@
                         <thead>
                             <tr>
                                 <th>ID</th>
+                                <th>Created Date</th>
                                 <th>First Name</th>
                                 <th>Last Name</th>
                                 <!-- Date column hidden per request -->
